Added missing translations for "foreca_" strings, translation fixes.

--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -80,42 +80,42 @@ Naprawdę to doceniam!"</string>
     <string name="foreca_cloudy_snow_showers">Duże opady śniegu</string>
     <string name="foreca_cloudy_ts_rain">Burze</string>
     <string name="foreca_cloudy_ts_snow">Śnieżyce</string>
-    <string name="foreca_cloudy_ts_wet_snow">T-storms with wet snow</string>
+    <string name="foreca_cloudy_ts_wet_snow">Burze z piorunami i mokry śnieg</string>
     <string name="foreca_cloudy_wet_snow">Mokry śnieg</string>
-    <string name="foreca_cloudy_wet_snow_showers">Wet snow showers</string>
+    <string name="foreca_cloudy_wet_snow_showers">Śnieg z desczem</string>
     <string name="foreca_mostly_clear">Pogodnie</string>
     <string name="foreca_mostly_clear_pos_rain">Możliwy deszcz</string>
     <string name="foreca_mostly_clear_pos_snow">Możliwy śnieg</string>
     <string name="foreca_mostly_clear_pos_ts_rain">Możliwe burze</string>
     <string name="foreca_mostly_clear_pos_ts_snow">Możliwe śnieżyce</string>
-    <string name="foreca_mostly_clear_pos_ts_wet_snow">Chance of t-storms with wet snow</string>
+    <string name="foreca_mostly_clear_pos_ts_wet_snow">Możliwe burze z piorunami z mokrym śniegiem</string>
     <string name="foreca_mostly_clear_pos_wet_snow">Możliwy mokry śnieg</string>
     <string name="foreca_overcast">Prognoza</string>
     <string name="foreca_overcast_l_rain">Lekki deszcz</string>
     <string name="foreca_overcast_l_snow">Lekki śnieg</string>
-    <string name="foreca_overcast_l_wet_snow">Light wet snow</string>
+    <string name="foreca_overcast_l_wet_snow">Lekki mokry śnieg</string>
     <string name="foreca_overcast_rain">Deszcz</string>
     <string name="foreca_overcast_showers">Deszcze</string>
     <string name="foreca_overcast_snow">Śnieg</string>
     <string name="foreca_overcast_snow_showers">Śnieżyce</string>
-    <string name="foreca_overcast_ts_rain">T-storms with rain</string>
-    <string name="foreca_overcast_ts_snow">T-storms with snow</string>
-    <string name="foreca_overcast_ts_wet_snow">T-storms with wet snow</string>
-    <string name="foreca_overcast_wet_snow">Wet snow</string>
-    <string name="foreca_overcast_wet_snow_showers">Wet snow showers</string>
-    <string name="foreca_partly_cloudy">Partly cloudy</string>
-    <string name="foreca_partly_cloudy_l_rain">Light rain</string>
-    <string name="foreca_partly_cloudy_l_snow">Light snow</string>
-    <string name="foreca_partly_cloudy_l_wet_snow">Light wet snow</string>
-    <string name="foreca_partly_cloudy_pos_ts_rain">Chance of t-storms with rain</string>
-    <string name="foreca_partly_cloudy_pos_ts_snow">Chance of t-storms with snow</string>
-    <string name="foreca_partly_cloudy_pos_ts_wet_snow">Chance of t-storms with wet snow</string>
-    <string name="foreca_partly_cloudy_rain">Rain</string>
-    <string name="foreca_partly_cloudy_showers">Showers</string>
-    <string name="foreca_partly_cloudy_snow">Snow</string>
-    <string name="foreca_partly_cloudy_snow_showers">Snow showers</string>
-    <string name="foreca_partly_cloudy_wet_snow">Wet snow</string>
-    <string name="foreca_partly_cloudy_wet_snow_showers">Wet snow showers</string>
+    <string name="foreca_overcast_ts_rain">Burze z piorunami i deszcz</string>
+    <string name="foreca_overcast_ts_snow">Burze z piorunami i śnieg</string>
+    <string name="foreca_overcast_ts_wet_snow">Burze z piorunami i mokry śnieg</string>
+    <string name="foreca_overcast_wet_snow">Mokry śnieg</string>
+    <string name="foreca_overcast_wet_snow_showers">Mokry śnieg</string>
+    <string name="foreca_partly_cloudy">Częściowe zachmurzenie</string>
+    <string name="foreca_partly_cloudy_l_rain">Lekki deszcz</string>
+    <string name="foreca_partly_cloudy_l_snow">Lekki śnieg</string>
+    <string name="foreca_partly_cloudy_l_wet_snow">Lekki mokry śnieg</string>
+    <string name="foreca_partly_cloudy_pos_ts_rain">Możliwe burze z piorunami i deszcz</string>
+    <string name="foreca_partly_cloudy_pos_ts_snow">Możliwe burze z piorunami i śnieg</string>
+    <string name="foreca_partly_cloudy_pos_ts_wet_snow">Możliwe burze z piorunami i mokrym śniegiem</string>
+    <string name="foreca_partly_cloudy_rain">Deszcz</string>
+    <string name="foreca_partly_cloudy_showers">Przelotne opady deszczu</string>
+    <string name="foreca_partly_cloudy_snow">Śnieg</string>
+    <string name="foreca_partly_cloudy_snow_showers">Przelotne opady śniegu</string>
+    <string name="foreca_partly_cloudy_wet_snow">Mokry śnieg</string>
+    <string name="foreca_partly_cloudy_wet_snow_showers">Przelotne opady śniegu</string>
     <string name="just_now">Teraz</string>
     <string name="loading">Wczytywanie\u2026</string>
     <string name="location_edit">Wpisz nazwę miasta</string>
