--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -122,6 +122,7 @@
     <string name="location_list">Locations</string>
     <string name="location_search">Location search</string>
     <string name="main_screen_text_color_summary">The text color of main screen data</string>
+    <string name="menu">Menu</string>
     <string name="menu_hourly">Hourly</string>
     <string name="menu_locations">Locations</string>
     <string name="menu_settings">Settings</string>
