--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -61,9 +61,22 @@
     <string name="menu">Меню</string>
     <string name="menu_update">Обновить</string>
     <string name="menu_settings">Настройки</string>
+    <string name="menu_indices">Индексы</string>
     <string name="menu_locations">Города</string>
+    <string name="menu_moon_phases">Фазы луны</string>
     <string name="menu_hourly">Почасовой</string>
     <string name="menu_trend">График</string>
+    <string name="moon_newmoon">Новолуние</string>
+    <string name="moon_waxingcrescent">Растущий месяц</string>
+    <string name="moon_firstquarter">Первая четверть</string>
+    <string name="moon_waxinggibbous">Растущая Луна</string>
+    <string name="moon_full">Полнолуние</string>
+    <string name="moon_waninggibbous">Убывающая Луна</string>
+    <string name="moon_lastquarter">Последняя четверть</string>
+    <string name="moon_waningcrescent">Убывающий месяц</string>
+    <string name="moon_current_view">Период отображения: %s</string>
+    <string name="moon_illuminated">Освещено</string>
+    <string name="moon_since">Начиная с</string>
     <string name="btn_add_location">Добавить город</string>
     <string name="btn_delete_location">Удалить город</string>
     <string name="location_gps">Текущее местоположение</string>
@@ -139,6 +152,7 @@
     <string name="settings_miui_support_title">Виджеты MIUI</string>
     <string name="settings_miui_v5_summary">Включите, если у вас MIUI v5</string>
     <string name="settings_miui_v5_title">Прошивка MIUI v5</string>
+    <string name="settings_moon_phases_title">Фазы луны</string>
     <string name="clear_miui_data">Очистка базы MIUI</string>
     <string name="clear_miui_data_summary">Очищает базу данных WeatherProvider</string>
     <string name="clear_miui_data_dialog">Очистка базы MIUI</string>
