--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -124,10 +124,23 @@
     <string name="main_screen_text_color_summary">The text color of main screen data</string>
     <string name="menu">Menu</string>
     <string name="menu_hourly">Hourly</string>
+    <string name="menu_indices">Indices</string>
     <string name="menu_locations">Locations</string>
+    <string name="menu_moon_phases">Moon Phases</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_trend">Trend</string>
     <string name="menu_update">Update</string>
+    <string name="moon_newmoon">New Moon</string>
+    <string name="moon_waxingcrescent">Waxing crescent</string>
+    <string name="moon_firstquarter">First quarter</string>
+    <string name="moon_waxinggibbous">Waxing gibbous</string>
+    <string name="moon_full">Full Moon</string>
+    <string name="moon_waninggibbous">Waning gibbous</string>
+    <string name="moon_lastquarter">Last quarter</string>
+    <string name="moon_waningcrescent">Waning crescent</string>
+    <string name="moon_current_view">View mode: %s</string>
+    <string name="moon_illuminated">Illuminated</string>
+    <string name="moon_since">Начиная с</string>
     <string name="network_error">Could not connect the server</string>
     <string name="new_version">New version</string>
     <string name="no_provider">Location is not available\nSelect location manually</string>
@@ -171,6 +184,7 @@
     <string name="settings_miui_support_title">MIUI widgets support</string>
     <string name="settings_miui_v5_summary">Turn on if you have MIUI v5 ROM</string>
     <string name="settings_miui_v5_title">MIUI v5 ROM</string>
+    <string name="settings_moon_phases_title">Moon Phases</string>
     <string name="settings_notification_color_title">Statusbar symbol color</string>
     <string name="settings_notification_summary">Show current weather conditions in the notification area</string>
     <string name="settings_notification_text_color_summary">Notification text and icons color</string>
