--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -28,7 +28,6 @@
     <string name="btn_add_location">Dodaj lokalizację</string>
     <string name="btn_delete_location">Usuń lokalizację</string>
     <string name="cancel">Anuluj</string>
-    <string name="changelog">Zmiany</string>
     <string name="clear_miui_data">Wyczyść dane pogody MIUI</string>
     <string name="clear_miui_data_dialog">Usuń dane pogody MIUI</string>
     <string name="clear_miui_data_dialog_ask">Usunąć dane MIUI Weather?</string>
@@ -116,6 +115,7 @@ Naprawdę to doceniam!"</string>
     <string name="foreca_partly_cloudy_snow_showers">Przelotne opady śniegu</string>
     <string name="foreca_partly_cloudy_wet_snow">Mokry śnieg</string>
     <string name="foreca_partly_cloudy_wet_snow_showers">Przelotne opady śniegu</string>
+    <string name="changelog">Zmiany</string>    
     <string name="just_now">Teraz</string>
     <string name="loading">Wczytywanie\u2026</string>
     <string name="location_edit">Wpisz nazwę miasta</string>
@@ -123,11 +123,25 @@ Naprawdę to doceniam!"</string>
     <string name="location_list">Lokalizacje</string>
     <string name="location_search">Wyszukaj lokalizacje</string>
     <string name="main_screen_text_color_summary">Kolor tekstu informacji na głównym ekranie</string>
+    <string name="menu">Menu</string>
     <string name="menu_hourly">Godzinowa</string>
+    <string name="menu_indices">Indekx</string>
     <string name="menu_locations">Lokalizacje</string>
+    <string name="menu_moon_phases">Fazy księżyca</string>
     <string name="menu_settings">Ustawienia</string>
     <string name="menu_trend">Trendy</string>
     <string name="menu_update">Odśwież</string>
+    <string name="moon_newmoon">Nów</string>
+    <string name="moon_waxingcrescent">Powiększający się sierp</string>
+    <string name="moon_firstquarter">Pierwsza kwadra</string>
+    <string name="moon_waxinggibbous">Powiększający się księżyc</string>
+    <string name="moon_full">Pełnia</string>
+    <string name="moon_waninggibbous">Zmniejszający się księżyc</string>
+    <string name="moon_lastquarter">Ostatnia kwadra</string>
+    <string name="moon_waningcrescent">Zmniejszający się sierp</string>
+    <string name="moon_current_view">%s</string>
+    <string name="moon_illuminated">Oświetlony</string>
+    <string name="moon_since">Начиная с</string>
     <string name="network_error">Połączenie z serwerem chwilowo niedostępne</string>
     <string name="new_version">Nowa wersja</string>
     <string name="no_provider">"Geolokalizacja nieudana
@@ -172,6 +186,7 @@ Wybierz lokalizację ręcznie"</string>
     <string name="settings_miui_support_title">Widżety MIUI</string>
     <string name="settings_miui_v5_summary">Kompatybilność z systemem MIUI v5</string>
     <string name="settings_miui_v5_title">Wsparcie dla MIUI v5</string>
+    <string name="settings_moon_phases_title">Fazy księżyca</string>
     <string name="settings_notification_color_title">Kolor symbolu na pasku statusu</string>
     <string name="settings_notification_summary">Pokaż informacje o warunkach pogodowych na pasku powiadomień</string>
     <string name="settings_notification_text_color_summary">Kolor ikon i tekstu powiadomień</string>
