--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -28,6 +28,7 @@
     <string name="btn_add_location">Přidat</string>
     <string name="btn_delete_location">Vymazat</string>
     <string name="cancel">Zrušit</string>
+    <string name="changelog">Seznam změn</string>
     <string name="clear_miui_data">Vyčistit údaje MIUI počasí</string>
     <string name="clear_miui_data_dialog">Vyčistit MIUI Počasí</string>
     <string name="clear_miui_data_dialog_ask">Vyčistit databázi MIUI počasí?</string>
@@ -35,11 +36,13 @@
     <string name="clear_miui_data_summary">Vyčistí databázi MIUI počasí</string>
     <string name="close">Zavřít</string>
     <string name="conf_add_widget">Přidat Widget</string>
-    <string name="conf_dark_skin">Tmavý vzhled</string>
     <string name="conf_choose_skin">Nastavit vzhled</string>
+    <string name="conf_dark_skin">Tmavý vzhled</string>
     <string name="conf_light_skin">Světlý vzhled</string>
     <string name="conf_name">Nastavení Widgetu</string>
     <string name="conf_no_background">Bez pozadí</string>
+    <string name="date_format_dmy">dd/MM/yyyy</string>
+    <string name="date_format_mdy">MM/dd/yyyy</string>
     <string name="date_format_title">Formát data</string>
     <string name="dialog_color_picker">Výběr barvy</string>
     <string name="dlg_go_to_forecast">Jít na předpověď</string>
@@ -53,14 +56,15 @@
     <string name="donations_google_android_market">Obchod Google Play</string>
     <string name="donations_google_android_market_description">Google si vezme 30 % z každého příspěvku!</string>
     <string name="donations_google_android_market_donate_button">Přispět!</string>
-    <string name="donations_google_android_market_not_supported_title">In-App příspěvky nejsou podporovány</string>
     <string name="donations_google_android_market_not_supported">In-App příspěvky nejsou podporovány. Je Google Play nainstalovaný správně?</string>
+    <string name="donations_google_android_market_not_supported_title">In-App příspěvky nejsou podporovány</string>
     <string name="donations_google_android_market_text">Kolik?</string>
     <string name="donations_paypal">PayPal</string> 
     <string name="donations_paypal_description">Můžete si zvolit výšku příspěvku!</string>
-    <string name="donations_paypal_item_name">InApp Příspěvek</string> 
+    <string name="donations_paypal_item_name">In-App Příspěvek</string> 
     <string name="donations_thanks_dialog">"Děkujeme za příspěvek! Jsme Vám velmi vděční!"</string>
     <string name="donations_thanks_dialog_title">Děkujeme!</string>
+    <string name="donations_yandex">Yandex.Money</string>
     <string name="download_video">Stáhnout video</string>
     <string name="end_time_title">Konec</string>
     <string name="fetching_location">Získávání Vaší polohy...</string>
@@ -111,7 +115,6 @@
     <string name="foreca_partly_cloudy_snow_showers">Sněhové přeháňky</string>
     <string name="foreca_partly_cloudy_wet_snow">Mokrý sníh</string>
     <string name="foreca_partly_cloudy_wet_snow_showers">Přeháňky s mokrým sněhem</string>
-    <string name="changelog">Seznam změn</string>
     <string name="just_now">Právě teď</string>
     <string name="loading">Načítání...</string>
     <string name="location_edit">Vložte název Města</string>
@@ -119,12 +122,26 @@
     <string name="location_list">Města</string>
     <string name="location_search">Vyhledat Město</string>
     <string name="main_screen_text_color_summary">Barva textu na hlavní obrazovce</string>
+    <string name="menu">Menu</string>
     <string name="menu_hourly">Hodinová</string>	
+    <string name="menu_indices">Index</string>
     <string name="menu_locations">Města</string>
+    <string name="menu_moon_phases">Fáze měsíce</string>
     <string name="menu_settings">Nastavení</string>
     <string name="menu_trend">Vývoj</string>	
     <string name="menu_update">Aktualizovat</string>
-    <string name="network_error">Není možné se připojit na server</string>
+    <string name="moon_current_view">%s</string>
+    <string name="moon_firstquarter">První čtvrt</string>
+    <string name="moon_full">Úplněk</string>
+    <string name="moon_illuminated">Zářící</string>
+    <string name="moon_lastquarter">Poslední čtvrt</string>
+    <string name="moon_newmoon">Nov</string>
+    <string name="moon_since">Od</string>
+    <string name="moon_waningcrescent">Ubývající srpek</string>
+    <string name="moon_waninggibbous">Couvající měsíc</string>
+    <string name="moon_waxingcrescent">Dorůstající srpek</string>
+    <string name="moon_waxinggibbous">Dorůstající měsíc</string>
+    <string name="network_error">Nelze se připojit na server</string>
     <string name="new_version">Nová verze</string> 
     <string name="no_provider">"Určení polohy selhalo. Zvolte město manuálně"</string>
     <string name="no_weather_provider">Žádný zdroj předpovědi</string> 
@@ -138,6 +155,7 @@
     <string name="quiet_hours_enabled_off">Aktualizace fungují jako obyčejně</string>
     <string name="quiet_hours_enabled_on">Čas ticha povolen</string>
     <string name="quiet_hours_title">Čas ticha</string>
+    <string name="save_screen_shot_failed">Ukládání screenshotu selhalo</string>
     <string name="settings_about_summary">Informace o aplikaci</string>
     <string name="settings_about_title">O aplikaci</string>
     <string name="settings_animation_download_summary">Stáhnout video animace pro aktuální předpověď počasí (pokud se nenašlo v telefonu)</string>
@@ -160,13 +178,14 @@
     <string name="settings_category_update_sum">Nastavení aktualizace počasí a intervalu obnovení</string>
     <string name="settings_category_widgets">Nastavení widgetu</string>
     <string name="settings_category_widgets_sum">Přizpůsobení widgetu a akce dotyku</string>
-    <string name="settings_click_actions">Akce kliknutí</string>
     <string name="settings_check_updates_summary">Kontrolovat aktualizace při spuštění</string>
     <string name="settings_check_updates_title">Kontrola aktualizací</string>
+    <string name="settings_click_actions">Akce kliknutí</string>
     <string name="settings_miui_support_summary">Povolte pro podporu widgetu počasí MIUI</string>
     <string name="settings_miui_support_title">MIUI widget</string>
     <string name="settings_miui_v5_summary">Povolte pokud používáte MIUI v5</string>
     <string name="settings_miui_v5_title">MIUI v5 ROM</string>
+    <string name="settings_moon_phases_title">Fáze měsíce</string>
     <string name="settings_notification_color_title">Barva symbolu v oznamovací liště</string>
     <string name="settings_notification_summary">Zobrazit aktuální Počasí v notifikační liště</string>
     <string name="settings_notification_text_color_summary">Barva textu a ikony upozornění</string>
@@ -196,6 +215,7 @@
     <string name="settings_widgets_widget4x1_data_title">Rozšířená data</string>
     <string name="settings_widgets_widget4x1_transparent_sum">Nastavte pro předvolené pozadí</string>
     <string name="settings_widgets_widget4x1_transparent_title">Průhledné pozadí</string>
+    <string name="settings_widgets_widget4x1_v5">Widget 4x1 (v5)</string>
     <string name="settings_widgets_widget4x2">Widget 4x2 (v4)</string>
     <string name="settings_widgets_widget4x2_city_font_summary">Předvolená hodnota 22sp</string>
     <string name="settings_widgets_widget4x2_city_font_title">Město</string>
@@ -211,12 +231,13 @@
     <string name="settings_widgets_widget4x2_feel_font_title">Pocity</string>
     <string name="settings_widgets_widget4x2_temp_font_summary">Předvolená hodnota 40sp</string>
     <string name="settings_widgets_widget4x2_temp_font_title">Teplota</string>
+    <string name="settings_widgets_widget4x2_v5">Widget 4x2 (v5)</string>
     <string name="settings_widgets_widget4x2_wind_font_summary">Předvolená hodnota 14sp</string>
     <string name="settings_widgets_widget4x2_wind_font_title">Vítr</string>
     <string name="share">Sdílet</string>
+    <string name="share_content">\#WeatherBZ#</string>
     <string name="share_weather_content">"\#WeatherBZ# Dnes %1$s je počasí %2$s, %3$s, %4$s. Stav z %5$s."</string>
     <string name="share_weather_title">Sdílet informace o počasí</string>
-    <string name="save_screen_shot_failed">Ukládání screenshotu selhalo</string>
     <string name="start_time_title">Začátek</string>
     <string name="temperature_units">Jednotka teploty</string>
     <string name="temperature_units_c">Celsius</string>
@@ -228,9 +249,9 @@
     <string name="visibility_units_km">" km"</string>
     <string name="visibility_units_m">" m"</string>
     <string name="visibility_units_mi">" míle"</string>
+    <string name="weather_cond_chancerain">Možné srážky</string>
     <string name="weather_cond_cloudy">Zamračeno</string>
     <string name="weather_cond_fog">Mlha</string>
-    <string name="weather_cond_chancerain">Možné srážky</string>
     <string name="weather_cond_lightsnow">Lehké sněžení</string>
     <string name="weather_cond_overcast">Zataženo</string>
     <string name="weather_cond_rain">Déšť</string>
@@ -250,10 +271,11 @@
     <string name="weather_sunset">"Západ: "</string>
     <string name="weather_visibility">"Viditelnost: "</string>
     <string name="weather_wind">"Vítr: "</string>
-    <string name="widget_name_large">Počasí BZ 4x2</string>
-    <string name="widget_name_large_v5">Počasí BZ 4x2</string>
-    <string name="widget_name_medium">Počasí BZ 4x1</string>
-    <string name="widget_name_medium_ext">Počasí BZ 4x1</string>
+    <string name="widget_name_large">Počasí 4x2</string>
+    <string name="widget_name_large_v5">Počasí 4x2 v5</string>
+    <string name="widget_name_medium">Počasí 4x1</string>
+    <string name="widget_name_medium_ext">Počasí 4x1ext</string>
+    <string name="widget_name_medium_v5">Počasí 4x1 v5</string>
     <string name="widget_text_color_summary">"barva textu widgetu"</string>
     <string name="wind_e">V</string>
     <string name="wind_ene">V-SV</string>
