--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -122,10 +122,23 @@
     <string name="main_screen_text_color_summary">Textfarbe der wichtigsten Daten auf der Anzeige</string> 
     <string name="menu">Menü</string>
     <string name="menu_hourly">Stündlich</string>
+    <string name="menu_indices">Indizes</string>
     <string name="menu_locations">Orte</string>
+    <string name="menu_moon_phases">Mondphasen</string>
     <string name="menu_settings">Einstellungen</string>
     <string name="menu_trend">Trend</string>
     <string name="menu_update">Aktualisierung</string>
+    <string name="moon_current_view">Ansichtmodus: %s</string>
+    <string name="moon_firstquarter">Erstes Viertel</string>
+    <string name="moon_full">Vollmond</string>
+    <string name="moon_illuminated">Beleuchtet</string>
+    <string name="moon_lastquarter">Letztes Viertel</string>
+    <string name="moon_newmoon">Neumond</string>
+    <string name="moon_since">Mond seit</string>
+    <string name="moon_waningcrescent">Abnehmender Halbmond</string>
+    <string name="moon_waninggibbous">Abnehmender Dreiviertelmond</string>
+    <string name="moon_waxingcrescent">Zunehmender Halbmond</string>
+    <string name="moon_waxinggibbous">Zunehmender Dreiviertelmond</string>
     <string name="network_error">Verbindung mit dem Server fehlgeschlagen</string>
     <string name="new_version">Neue Version</string> 
     <string name="no_provider">Positionierung nicht möglich\nWähle den Ort selbst aus</string>
@@ -170,6 +183,7 @@
     <string name="settings_miui_support_title">MIUI-Widget-Unterstützung</string>
     <string name="settings_miui_v5_summary">Einschalten wenn du ein MIUI v5 ROM verwendest</string>
     <string name="settings_miui_v5_title">MIUI v5 ROM</string>    
+    <string name="settings_moon_phases_title">Mondphasen</string>
     <string name="settings_notification_color_title">Benachrichtigungssymbolfarbe</string>
     <string name="settings_notification_summary">Zeige aktuelle Wetterbedingungen im Benachrichtigungsbereich</string>
     <string name="settings_notification_text_color_summary">Benachrichtigungstext- und \u2011symbolfarbe</string>
