--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -124,12 +124,13 @@
     <string name="main_screen_text_color_summary">The text color of main screen data</string>
     <string name="menu">Menu</string>
     <string name="menu_hourly">Hourly</string>
-    <string name="menu_indices">Indices</string>
+    <string name="menu_indices">Life Style</string>
     <string name="menu_locations">Locations</string>
     <string name="menu_moon_phases">Moon Phases</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_trend">Trend</string>
     <string name="menu_update">Update</string>
+    <string name="moon_age">Age %s days</string>
     <string name="moon_newmoon">New Moon</string>
     <string name="moon_waxingcrescent">Waxing crescent</string>
     <string name="moon_firstquarter">First quarter</string>
@@ -180,6 +181,8 @@
     <string name="settings_click_actions">Click actions</string>
     <string name="settings_check_updates_summary">Check for updates on application start</string>
     <string name="settings_check_updates_title">Check for updates</string>
+    <string name="settings_hide_bottom_bar_title">Hide bottom bar</string>
+    <string name="settings_hide_bottom_bar_summary">Touch screen to hide bottom bar with buttons</string>
     <string name="settings_miui_support_summary">Turn on to support MIUI native widgets</string>
     <string name="settings_miui_support_title">MIUI widgets support</string>
     <string name="settings_miui_v5_summary">Turn on if you have MIUI v5 ROM</string>
@@ -298,4 +301,16 @@
     <string name="wind_w">W</string>
     <string name="wind_wnw">W-NW</string>
     <string name="wind_wsw">W-SW</string>
+    <string name="zodiac_aries">Aries</string>
+    <string name="zodiac_taurus">Taurus</string>
+    <string name="zodiac_gemini">Gemini</string>
+    <string name="zodiac_cancer">Cancer</string>
+    <string name="zodiac_leo">Leo</string>
+    <string name="zodiac_virgo">Virgo</string>
+    <string name="zodiac_libra">Libra</string>
+    <string name="zodiac_scorpio">Scorpio</string>
+    <string name="zodiac_sagittarius">Sagittarius</string>
+    <string name="zodiac_capricorn">Capricorn</string>
+    <string name="zodiac_aquarius">Aquarius</string>
+    <string name="zodiac_pisces">Pisces</string>
 </resources>
