--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -124,7 +124,7 @@
     <string name="save_screen_shot_failed">Ошибка при сохранении скриншота</string>
     <string name="no_provider">Ошибка определения местоположения\nВыберите местоположение вручную</string>
     <string name="no_weather_provider">MIUI weather provider не найден</string>
-    <string name="network_error">Нет соединения с сервером</string>
+    <string name="network_error">Нет соединения с сервером.\nПроверьте настройки сети.</string>
     <string name="updating">Обновление</string>
     <string name="just_now">Только что</string>
     <string name="fetching_location">Определение местоположения\u2026</string>
