--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -130,6 +130,7 @@
     <string name="menu_settings">Nastavení</string>
     <string name="menu_trend">Vývoj</string>	
     <string name="menu_update">Aktualizovat</string>
+    <string name="moon_age">Věk: %s dní</string>
     <string name="moon_current_view">%s</string>
     <string name="moon_firstquarter">První čtvrt</string>
     <string name="moon_full">Úplněk</string>
@@ -181,6 +182,8 @@
     <string name="settings_check_updates_summary">Kontrolovat aktualizace při spuštění</string>
     <string name="settings_check_updates_title">Kontrola aktualizací</string>
     <string name="settings_click_actions">Akce kliknutí</string>
+    <string name="settings_hide_bottom_bar_title">Skrýt spodní lištu</string>
+    <string name="settings_hide_bottom_bar_summary">Dotkněte se displeje pro skrytí spodní lišty s tlačítky</string>
     <string name="settings_miui_support_summary">Povolte pro podporu widgetu počasí MIUI</string>
     <string name="settings_miui_support_title">MIUI widget</string>
     <string name="settings_miui_v5_summary">Povolte pokud používáte MIUI v5</string>
@@ -298,4 +301,16 @@
     <string name="wind_w">Z</string>
     <string name="wind_wnw">Z-SZ</string>
     <string name="wind_wsw">Z-JZ</string>
+    <string name="zodiac_aries">Baran</string>
+    <string name="zodiac_taurus">Býk</string>
+    <string name="zodiac_gemini">Blíženci</string>
+    <string name="zodiac_cancer">Rak</string>
+    <string name="zodiac_leo">Lev</string>
+    <string name="zodiac_virgo">Panna</string>
+    <string name="zodiac_libra">Váhy</string>
+    <string name="zodiac_scorpio">Štír</string>
+    <string name="zodiac_sagittarius">Střelec</string>
+    <string name="zodiac_capricorn">Kozoroh</string>
+    <string name="zodiac_aquarius">Vodnář</string>
+    <string name="zodiac_pisces">Ryby</string>
 </resources>
