--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -124,7 +124,7 @@
     <string name="main_screen_text_color_summary">Barva textu na hlavní obrazovce</string>
     <string name="menu">Menu</string>
     <string name="menu_hourly">Hodinová</string>	
-    <string name="menu_indices">Index</string>
+    <string name="menu_indices">Životní styl</string>
     <string name="menu_locations">Města</string>
     <string name="menu_moon_phases">Fáze měsíce</string>
     <string name="menu_settings">Nastavení</string>
