--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -122,7 +122,7 @@
     <string name="main_screen_text_color_summary">Textfarbe der wichtigsten Daten auf der Anzeige</string> 
     <string name="menu">Menü</string>
     <string name="menu_hourly">Stündlich</string>
-    <string name="menu_indices">Life Style</string>
+    <string name="menu_indices">Lifestyle</string>
     <string name="menu_locations">Orte</string>
     <string name="menu_moon_phases">Mondphasen</string>
     <string name="menu_settings">Einstellungen</string>
